<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:id="@+id/linearlayout"
    android:orientation="vertical"
    tools:context=".Pagos"
    android:gravity="center">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/ConfirmacionPago"
        android:textColor="@color/colorLetra"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <Button
            android:id="@+id/button3"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorBotones"
            android:onClick="generar"
            android:padding="10dp"
            android:text="@string/botonFactura" />

        <Button
            android:id="@+id/button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorBotones"
            android:onClick="calificar"
            android:padding="10dp"
            android:text="@string/botonCalificar" />

    </LinearLayout>
</LinearLayout>