<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:id="@+id/linearlayout"
    android:orientation="vertical"
    tools:context=".Confirmar_Compra">

    <TableLayout
        android:id="@+id/tablaComprasDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:stretchColumns="*"
        android:background="@color/colorTabla"   >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/columnaProducto"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:text="@string/columna1"
                android:textAlignment="center"
                android:textColor="@color/colorLetra"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/columnaValor"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:text="@string/columna2"
                android:textAlignment="center"
                android:textColor="@color/colorLetra"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/columnaCantidad"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:text="@string/columna3"
                android:textAlignment="center"
                android:textColor="@color/colorLetra"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/columnaSubtotal"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:text="@string/columna4"
                android:textAlignment="center"
                android:textColor="@color/colorLetra"
                android:textSize="18dp" />

        </TableRow>


    </TableLayout>

    <TextView
        android:id="@+id/totalPagarDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/colorPrimaryDark"
        android:textAlignment="center"
        android:textColor="@color/colorLetra"
        android:textSize="18sp" />


</LinearLayout>